--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-                            <div class="basic-yop-poll-container orange-v3">
+                            <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="basic-inner">
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-                            <div class="basic-yop-poll-container orange-v1">
+                            <div class="basic-yop-poll-container orange-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="basic-inner">
@@ -200,7 +200,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-                            <div class="basic-yop-poll-container orange-v4">
+                            <div class="basic-yop-poll-container orange-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="basic-inner">
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-                            <div class="basic-yop-poll-container orange-v5">
+                            <div class="basic-yop-poll-container orange-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="basic-inner">
