--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+			    <i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
