--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     <!-- orange skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -151,6 +152,7 @@
                     <!-- orange skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -213,6 +215,7 @@
                     <!-- orange skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -275,6 +278,7 @@
                     <!-- orange skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -338,6 +342,7 @@
                     <!-- green skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -400,6 +405,7 @@
                     <!-- green skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -462,6 +468,7 @@
                     <!-- green skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -524,6 +531,7 @@
                     <!-- green skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -586,6 +594,7 @@
                     <!-- green skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -649,6 +658,7 @@
                     <!-- red skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -711,6 +721,7 @@
                     <!-- red skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -773,6 +784,7 @@
                     <!-- red skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -835,6 +847,7 @@
                     <!-- red skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -897,6 +910,7 @@
                     <!-- red skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -960,6 +974,7 @@
                     <!-- blue skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1022,6 +1037,7 @@
                     <!-- blue skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1084,6 +1100,7 @@
                     <!-- blue skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1146,6 +1163,7 @@
                     <!-- blue skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1208,6 +1226,7 @@
                     <!-- blue skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1271,6 +1290,7 @@
                     <!-- dark skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container dark-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1333,6 +1353,7 @@
                     <!-- grey skins-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container grey" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1395,6 +1416,7 @@
                     <!-- white skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container white-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1457,6 +1479,7 @@
                     <!-- dark skins v2--> 
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container dark-v2" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1519,6 +1542,7 @@
                     <!-- white skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
+				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container white-v2" style="padding-top: 14px;padding-bottom: 14px;">
                                 <div class="row">
                                     <div class="col-md-12">
