--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row">
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure">
+                        <figure class="yp-figure shadow">
 			    <i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
@@ -88,7 +88,7 @@
                     </div><!-- orange v3-->
                     <!-- orange skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure">
+                        <figure class="yp-figure shadow">
 				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v2">
                                 <div class="row">
@@ -151,7 +151,7 @@
                     </div><!-- orange v2-->
                     <!-- orange skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure">
+                        <figure class="yp-figure shadow">
 				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
