--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row">
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure shadow">
+                        <figure class="yp-figure shadow selected">
 			    <i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
