--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <link rel="stylesheet" type="text/css" href="css/dark-white.css">
 </head>
 <body>
-    <div class="container" style="margin-top: 25px;"><!-- no need -->
+    <div class="container" style="margin-top: 50px;"><!-- no need -->
         <div class="row"><!-- no need -->
             <div class="col-md-12"><!-- no need -->
                 
                 <div class="row">
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure shadow selected">
-			    <i class="glyphicon glyphicon-ok"></i>
+                        <figure class="yp-figure">
+                            <i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -88,8 +88,7 @@
                     </div><!-- orange v3-->
                     <!-- orange skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure shadow">
-				<i class="glyphicon glyphicon-ok"></i>
+                        <figure class="yp-figure">
                             <div class="basic-yop-poll-container orange-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -151,8 +150,7 @@
                     </div><!-- orange v2-->
                     <!-- orange skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure shadow">
-				<i class="glyphicon glyphicon-ok"></i>
+                        <figure class="yp-figure selected">
                             <div class="basic-yop-poll-container orange-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -215,7 +213,6 @@
                     <!-- orange skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -278,7 +275,6 @@
                     <!-- orange skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container orange-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -342,7 +338,6 @@
                     <!-- green skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -405,7 +400,6 @@
                     <!-- green skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -468,7 +462,6 @@
                     <!-- green skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -531,7 +524,6 @@
                     <!-- green skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -594,7 +586,6 @@
                     <!-- green skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container green-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -658,7 +649,6 @@
                     <!-- red skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -721,7 +711,6 @@
                     <!-- red skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -784,7 +773,6 @@
                     <!-- red skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -847,7 +835,6 @@
                     <!-- red skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -910,7 +897,6 @@
                     <!-- red skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container red-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -974,7 +960,6 @@
                     <!-- blue skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1037,7 +1022,6 @@
                     <!-- blue skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v2">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1100,7 +1084,6 @@
                     <!-- blue skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1163,7 +1146,6 @@
                     <!-- blue skins v4-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v4" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1226,7 +1208,6 @@
                     <!-- blue skins v5-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container blue-v5" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1290,7 +1271,6 @@
                     <!-- dark skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container dark-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1353,7 +1333,6 @@
                     <!-- grey skins-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container grey" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1416,7 +1395,6 @@
                     <!-- white skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container white-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1479,7 +1457,6 @@
                     <!-- dark skins v2--> 
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container dark-v2" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -1542,7 +1519,6 @@
                     <!-- white skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
                         <figure class="yp-figure">
-				<i class="glyphicon glyphicon-ok"></i>
                             <div class="basic-yop-poll-container white-v2" style="padding-top: 14px;padding-bottom: 14px;">
                                 <div class="row">
                                     <div class="col-md-12">
