--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         <div class="row"><!-- no need -->
             <div class="col-md-12"><!-- no need -->
                 
-                <div class="row">
+                <div class="row skins-basic">
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure">
-                            <i class="glyphicon glyphicon-ok"></i>
+                        <figure class="yp-figure selected">
+                        	<div class="selected-overlay">
+                        		<i class="glyphicon glyphicon-ok"></i>
+                        	</div>
                             <div class="basic-yop-poll-container orange-v3" style="padding-top: 12px;padding-bottom: 12px;">
                                 <div class="row">
                                     <div class="col-md-12">
