--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div><!-- orange v2-->
                     <!-- orange skins v1-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure selected">
+                        <figure class="yp-figure">
                             <div class="basic-yop-poll-container orange-v1" style="padding-top: 15px;padding-bottom: 15px;">
                                 <div class="row">
                                     <div class="col-md-12">
