--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row skins-basic">
                     <!-- orange skins v3-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure selected">
+                        <figure class="yp-figure selected" onclick="">
                         	<div class="selected-overlay">
                         		<i class="glyphicon glyphicon-ok"></i>
                         	</div>
@@ -90,7 +90,7 @@
                     </div><!-- orange v3-->
                     <!-- orange skins v2-->
                     <div class="col-xs-6 col-sm-4 col-md-2 col-width">
-                        <figure class="yp-figure">
+                        <figure class="yp-figure" onclick="">
                             <div class="basic-yop-poll-container orange-v2">
                                 <div class="row">
                                     <div class="col-md-12">
